Bug 993930 - Do not assume TabChild::mInnerSize being (0, 0) means it's never been initialized. r=kats, a=1.4+